se agrega ell filtrado por categorias